2004-10-08  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c: Yet another IRQ shield implementation.

2004-10-07  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Make sure we
	will attempt to restart the nanosleep() substitute if interrupted
	by a signal.

	* nucleus/fusion.c (__pthread_sleep_rt): Return -EINTR upon
	interrupt.

	* nucleus/pod.c (xnpod_add_hook, xnpod_remove_hook): Fix an
	obscure SMP race that occurred when using job control on
	testsuite/latency.

	* nucleus/shadow.c (xnshadow_linux_sysentry): Reread the current
	Xenomai thread pointer for calling request_syscall_restart();
	it might have been NULL on entry then only set during the just
	performed syscall as a result of the initial shadow mapping.

2004-10-07  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/cruncher/cruncher.c (cruncher_thread): Test the value
	returned by the computation loop and compile with the correct
	optimization flags.

	* configure.in: Add check for the architecture tuning flags used
	by the kbuild.

	* include/nucleus/asm-i386/system.h (xnarch_switch_to): Remove
	useless restoration of the ts bit.

2004-10-06  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c: Rewrite the interrupt shield management.
	(xnshadow_linux_taskexit): No more need to disable the interrupt
	shield upon task exit.

	* testsuite/latency/latency.c: Rearrange cleanup actions so that
	we don't get caught in a tight sampling loop when the timer is
	stopped by the signal handler.

2004-10-05  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_linux_taskexit): Disengage the
	interrupt shield so that synchronous IPIs that might be used in
	the task cleanup code could flow to Linux freely.
	(engage_local_irq_shield): Lock hw interrupts.
	(engage_local_irq_shield):
	(disengage_local_irq_shield): Remove superfluous check for virtual
	IRQs.

2004-10-04  Edelhard Becker <ebecker@software-manufaktur.de>
